Fix contrast ration on the portfolio section

--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ h2.lets-connect {
   line-height: 16px;
   letter-spacing: 0;
   text-align: left;
-  color: #69768C;
+  color: #4F5969;
 }
 
 .portfolio p {
